# bukang-web

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  .env  .env.example  bukang.db  migrate.py  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/application/interfaces/: jwt.py  password.py
backend/app/application/use_cases/: auth_use_case.py  student_use_case.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/domain/entities/: user.py
backend/app/domain/repositories/: user_repository.py
backend/app/infrastructure/persistence/models/: student.py  user.py
backend/app/infrastructure/persistence/repositories/: user_repository.py
backend/app/infrastructure/security/: jwt.py  password.py
backend/app/infrastructure/storage/: hf_storage.py
backend/app/models/: student.py  user.py
backend/app/presentation/: dependencies.py
backend/app/presentation/routers/: auth.py  students.py
backend/app/presentation/schemas/: auth.py  response.py  student.py
backend/app/routers/: auth.py  students.py
backend/app/schemas/: auth.py  response.py  student.py
backend/app/services/: auth_service.py  student_service.py
backend/tests/: conftest.py  test_auth.py  test_students.py
src/: index.css  main.tsx
src/app/: index.css  main.tsx
src/components/: BackgroundBubbles.tsx  Login.tsx  Navbar.tsx
src/context/: AuthContext.tsx
src/pages/: Capture.tsx  Home.tsx  Mahasiswa.tsx
(+6 files in other folders)
